chore: change button's text in first section of index page

--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -28,7 +28,7 @@
               is to serve as a one-stop solution for online transactions and analysis.
           </p>
           <div class="buttons">
-              <a href="/docs" class="btn btn-primary f-fl"> GET STARTED </a>
+              <a href="/docs" class="btn btn-primary f-fl"> Get Started </a>
               <a href="http://github.com/pingcap" class="btn btn-secondary f-fl" target="_blank"> GitHub </a>
           </div>
       </div>
