chore: change buttons' text of cta-footer section in index page

--- a/layouts/partials/layout/cta-footer-cn.html
+++ b/layouts/partials/layout/cta-footer-cn.html
@@ -1,7 +1,7 @@
 <div class="cta-footer">
-  <h4 class="cta-footer__headline">准备好开始使用<br>一个分布式 HTAP 数据库了吗?</h4>
+  <h4 class="cta-footer__headline">体验全新的分布式 HTAP 数据库？</h4>
   <div class="buttons">
-    <a href="/docs-cn/QUICKSTART/" class="btn btn-primary">免费试用 TiDB</a>
-    <a href="/blog-cn" class="btn btn-secondary">深入了解 TiDB</a>
+    <a href="/docs-cn/QUICKSTART/" class="btn btn-primary">下载</a>
+    <a href="/blog-cn" class="btn btn-secondary">了解更多</a>
   </div>
 </div>
