--- a/layouts/partials/layout/cta-footer.html
+++ b/layouts/partials/layout/cta-footer.html
@@ -1,7 +1,7 @@
 <div class="cta-footer">
   <h4 class="cta-footer__headline">Ready to get started with <br>a distributed HTAP database?</h4>
   <div class="buttons">
-    <a href="/docs/QUICKSTART/" class="btn btn-primary">Try TiDB for free</a>
-    <a href="/blog" class="btn btn-secondary">Learn more about TiDB</a>
+    <a href="/docs/QUICKSTART/" class="btn btn-primary">Download</a>
+    <a href="/blog" class="btn btn-secondary">Learn More</a>
   </div>
 </div>
