--- a/layouts/partials/layout/mobile-sidebar-cn.html
+++ b/layouts/partials/layout/mobile-sidebar-cn.html
@@ -13,7 +13,7 @@
     <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog-cn">博客</a></li>
     <!-- <li {{ if eq $nav_active "meetup"}}class="sel"{{end}}><a href="/meetup">Meetup</a></li> -->
     <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about-cn">关于</a></li>
-    <li><a class="link-download" href="/docs-cn/QUICKSTART/">试用</a></li>
+    <li><a class="link-download" href="/docs-cn/QUICKSTART/">下载</a></li>
   </ul>
   <div class="nav-footer">
     <div class="contact-list-wrap">
