polish: polish style of cta-footer

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -104,7 +104,7 @@
     justify-content: space-between;
 
     .btn {
-      width: 7.2rem;
+      width: @primary_button_width;
       margin-top: 2.25rem;
     }
 
@@ -282,6 +282,7 @@
     justify-content: center;
     .btn {
       margin: 0 10px;
+      min-width: @primary_button_width;
     }
   }
 }
@@ -363,7 +364,7 @@
     display: block;
     .btn {
       margin: 0 auto;
-      width: 200px;
+      width: 180px;
     }
 
     .btn-primary {
