chore: change content of footer section

--- a/layouts/partials/layout/footer-cn.html
+++ b/layouts/partials/layout/footer-cn.html
@@ -34,8 +34,7 @@
         <ul>
           <li><a href="https://pingcap.com/about-cn/">关于</a></li>
           <li><a href="https://pingcap.com/recruit-cn/">招贤纳士</a></li>
-          <li><a href="https://pingcap.com/customers-cn/">用户案例</a></li>
-          <li><a href="https://pingcap.com/news-cn/">新闻媒体</a></li>
+          <li><a href="https://pingcap.com/news-cn/">报道</a></li>
         </ul>
       </div>
     </div>
