--- a/layouts/partials/layout/header-cn.html
+++ b/layouts/partials/layout/header-cn.html
@@ -6,7 +6,7 @@
     <div class="nav-wrapper">
       <div class="navigations">
         <ul>
-          <li {{ if eq $nav_active "customers"}}class="sel"{{end}}><a href="/customers-cn">案例</a></li>
+          <li {{ if eq $nav_active "cases"}}class="sel"{{end}}><a href="/cases-cn">用户案例</a></li>
           <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs-cn/overview/#tidb-%e7%ae%80%e4%bb%8b">文档</a></li>
           <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog-cn">博客</a></li>
           <!-- <li {{ if eq $nav_active "meetup"}}class="sel"{{end}}><a href="/meetup">Meetup</a></li> -->
