--- a/layouts/partials/layout/mobile-sidebar.html
+++ b/layouts/partials/layout/mobile-sidebar.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <ul class="ul-base">
-    <li {{ if eq $nav_active "customers"}}class="sel"{{end}}><a href="/customers">Customers</a></li>
+    <li {{ if eq $nav_active "cases"}}class="sel"{{end}}><a href="/cases">Use Cases</a></li>
     <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs">Docs</a></li>
     <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog">Blog</a></li>
     <li {{ if eq $nav_active "weekly"}}class="sel"{{end}}><a href="/weekly">Weekly</a></li>
