--- a/src/less/header.less
+++ b/src/less/header.less
@@ -332,6 +332,7 @@ nav.mobile-sidebar {
           a {
             box-sizing: content-box;
             display: flex;
+            justify-content: center;
             align-items: center;
             height: @nav_height;
             padding: 0.5rem 0.4rem;
@@ -347,7 +348,8 @@ nav.mobile-sidebar {
 
       a.link-download {
         height: @download_button_height;
-        padding: 0 0.7rem;
+        min-width: 3.5em;
+        padding: 0 1em;
         margin: 0 0.2rem;
         .rounded-corners(0.9rem);
         text-align: center;
