--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -78,7 +78,6 @@
   .list {
     flex: 1;
     padding: 20px;
-    min-height: 500px;
     max-width: calc(~'100% - 24rem');
     padding: calc(~'@{header_height} + 20px') 1rem 1.5rem;
 
@@ -239,11 +238,12 @@
   }
 
   .git-info {
-    margin-top: 2.5rem;
-    padding: 16px 14px;
+    margin-top: 5rem;
+    padding: 1rem 0.7rem;
     background-color: rgba(27, 31, 35, 0.05);
-    font-size: 16px;
+    font-size: 0.8rem;
     font-weight: 500;
+    line-height: 1.7;
     color: @text_color;
 
     a {
