feat: refactor meta template and polish seo about open graph

--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -13,6 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <title>{{- block "title" . }}{{- or .Title "Home" -}}{{ end -}} | PingCAP</title>
+    {{ partial "head/meta-seo" . }}
+    {{ block "headtpl" . }}{{ end }}
     <script type="text/javascript">
     if (location.pathname === "/") {
       if (location.hostname === "pingcap.github.io") {
@@ -20,8 +22,6 @@
       }
     }
     </script>
-    {{ partial "head/meta" . }}
-    {{ block "headcss" . }}{{ end }}
 </head>
 
 <!-- Todo body class extend -->
