--- a/layouts/blog-cn/list.html
+++ b/layouts/blog-cn/list.html
@@ -1,6 +1,6 @@
 {{ define "title" }} 博客 {{ end }}
 
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "blog"}}
   {{$.Scratch.Set "data_i18_cn" true }}
   {{$.Scratch.Set "data_i18_link" "/blog" }}
