--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,6 +1,6 @@
 {{ define "title" }} Blog {{ end }}
 
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "blog"}}
   {{$.Scratch.Set "data_i18_link" "/blog-cn" }}
 {{ end }}
