--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,6 +1,6 @@
 {{ define "title" }} Docs {{ end }}
 
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "docs"}}
   {{$.Scratch.Set "data_i18_link" "/docs-cn" }}
 {{ end }}
