--- a/layouts/meetup/archive.html
+++ b/layouts/meetup/archive.html
@@ -1,6 +1,6 @@
 {{ define "title" }}Meetup{{ end }}
 
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "meetup"}}
   {{$.Scratch.Set "data_i18_cn" true }}
   {{$.Scratch.Set "data_i18_link" "/weekly" }}
