--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -1,6 +1,6 @@
 {{ define "title" }}关于{{ end }}
 
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "about"}}
   {{$.Scratch.Set "data_i18_cn" true }}
   {{$.Scratch.Set "data_i18_link" "/about" }}
