--- a/layouts/page/cloud-tidb-agreement.html
+++ b/layouts/page/cloud-tidb-agreement.html
@@ -1,6 +1,6 @@
 {{ define "title" }}公有云用户 TiDB 数据库服务协议{{ end }}
 
-{{ define "headcss" }}
+{{ define "headtpl" }}
 {{$.Scratch.Set "data_i18_cn" true }}
 <meta name="robots" content="noindex,nofollow,nosnippet">
 
