--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -1,6 +1,6 @@
 {{ define "title" }}首页{{ end }}
 
-{{ define "headcss" }}
+{{ define "headtpl" }}
   <meta name="baidu-site-verification" content="hrZ03lmoDB" />
   <meta name="google-site-verification" content="drHXf-Q97rcbwLZryBSFV8eW1pj1ddF4MHzZOfODhQU" />
   {{$.Scratch.Set "data_i18_cn" true }}
