--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -1,4 +1,4 @@
-{{ define "headcss" }}
+{{ define "headtpl" }}
   <meta name="baidu-site-verification" content="hrZ03lmoDB" />
   <meta name="google-site-verification" content="drHXf-Q97rcbwLZryBSFV8eW1pj1ddF4MHzZOfODhQU" />
   {{$.Scratch.Set "data_i18_link" "/index.html" }}
