--- a/layouts/weekly/list.html
+++ b/layouts/weekly/list.html
@@ -1,6 +1,6 @@
 {{ define "title" }}Weekly{{ end }}
 
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "weekly"}}
   <!-- TODO: change weekly to meetup -->
   {{$.Scratch.Set "data_i18_link" "/weekly" }}
