--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,4 +1,4 @@
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "blog"}}
   {{$.Scratch.Set "data_i18_link" "/blog-cn" }}
 {{ end }}
