--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -1,6 +1,6 @@
 {{ define "title" }} 文档 {{ end }}
 
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "docs"}}
   {{$.Scratch.Set "data_i18_cn" true }}
   {{$.Scratch.Set "data_i18_link" "/docs" }}
