--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -1,4 +1,4 @@
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "docs"}}
   {{$.Scratch.Set "data_i18_cn" true }}
   {{$v0 := (strings.TrimPrefix "docs-cn/" .File.Path )}}
