--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -1,4 +1,4 @@
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "docs"}}
   {{$.Scratch.Set "data_i18_link" "/docs-cn" }}
   {{$v0 := (strings.TrimPrefix "docs/" .File.Path )}}
