--- a/layouts/meetup/single.html
+++ b/layouts/meetup/single.html
@@ -1,4 +1,4 @@
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "meetup"}}
   {{$.Scratch.Set "data_i18_cn" true }}
   {{$.Scratch.Set "data_i18_link" "/weekly" }}
