--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -1,6 +1,6 @@
 {{ define "title" }}About{{ end }}
 
-{{ define "headcss" }}
+{{ define "headtpl" }}
 {{$.Scratch.Set "nav_active" "about"}}
 {{$.Scratch.Set "data_i18_link" "/about-cn" }}
 <style type="text/css" media="screen">
