--- a/layouts/recruit-cn/list.html
+++ b/layouts/recruit-cn/list.html
@@ -1,6 +1,6 @@
 {{ define "title" }}招聘{{ end }}
 
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "about"}}
   {{$.Scratch.Set "data_i18_link" "/recruit" }}
   {{$.Scratch.Set "data_i18_cn" true }}
