--- a/layouts/recruit-cn/single.html
+++ b/layouts/recruit-cn/single.html
@@ -1,4 +1,4 @@
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "about"}}
   {{$.Scratch.Set "data_i18_cn" true }}
   {{$.Scratch.Set "data_i18_link" "/recruit" }}
@@ -19,6 +19,7 @@
 
     <div class="archive">
         <div class="content">{{ .Content }}</div>
+        <!-- TODO: change to left fixed -->
         <div class="operate">
           <div class="item">
             <a href="mailto:hire@pingcap.com">
