--- a/layouts/recruit/single.html
+++ b/layouts/recruit/single.html
@@ -1,4 +1,4 @@
-{{ define "headcss" }}
+{{ define "headtpl" }}
   {{$.Scratch.Set "nav_active" "about"}}
   {{$.Scratch.Set "data_i18_link" "/recruit-cn" }}
 {{ end }}
@@ -18,6 +18,7 @@
 
     <div class="archive">
       <div class="content">{{ .Content }}</div>
+      <!-- TODO: change to left fixed -->
       <div class="operate">
         <div class="item">
           <a href="mailto:hire@pingcap.com">
