feat: add social media links in blog template

--- a/layouts/blog-cn/single.html
+++ b/layouts/blog-cn/single.html
@@ -30,6 +30,7 @@
         </ul>
         <div class="blog-text">{{ .Content }}</div>
      </div>
+     {{ partial "archives/post-share-cn.html" . }}
     </div>
   </div>
 </div>
