--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -29,6 +29,8 @@
         </ul>
         <div class="blog-text">{{ .Content }}</div>
       </div>
+
+      {{ partial "archives/post-share.html" . }}
     </div>
   </div>
 </div>
