polish: polish social links in footer section

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -63,27 +63,40 @@
   right: 158px;
   top: -100px;
   text-align: center;
-  .qr_code_inner {
-    .qr_code {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 158px;
-      padding: 12px;
-      border: 1px solid #d9dadc;
-      background-color: @white;
-      word-wrap: break-word;
-      word-break: break-all;
-      p {
-        margin: 0;
-        line-height: 1.5;
-        font-size: 0.6rem;
-        color: #888;
-      }
-      .qr_code_img {
-        width: 116px;
-        height: 116px;
-      }
+
+  .qr_code {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 158px;
+    padding: 12px 15px;
+    border: 1px solid #d9dadc;
+    background-color: @white;
+    word-wrap: break-word;
+    word-break: break-all;
+    p {
+      margin: 0;
+      line-height: 1.5;
+      font-size: 0.6rem;
+      color: #333;
+      font-weight: 300;
+    }
+    .qr_code_img {
+      width: 116px;
+      height: 116px;
+    }
+  }
+
+  #close_qrcode {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    padding: 10px;
+
+    svg {
+      display: block;
     }
   }
 }
@@ -155,7 +168,7 @@
           }
           &.reddit {
             &:hover svg {
-              fill: #dd0008;
+              fill: #d80000;
             }
           }
           &.google-plus {
@@ -204,14 +217,13 @@
   }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 880px) {
   .footer {
     height: @footer_height_pc;
   }
 }
 
-//iPhone4、iPhone5、iPhone6
-@media (max-width: 600px) {
+@media (max-width: 879px) {
   .footer {
     .container,
     .flex-list-wrap,
