--- a/src/less/list.less
+++ b/src/less/list.less
@@ -11,7 +11,6 @@
     .article {
       position: relative;
       .title {
-        // margin: 25px 0 15px;
         margin-bottom: 1rem;
         font-family: 'TitilliumWeb';
         font-size: 1.2rem;
@@ -89,6 +88,93 @@
       .link {
         margin: 0 2px;
         text-decoration: underline;
+      }
+    }
+  }
+}
+
+.cases,
+.news {
+  .list {
+    .list-item {
+      display: flex;
+      align-items: center;
+      padding: 30px 0px;
+      border-bottom: 1px solid #cdcdcd;
+
+      .list-item__left {
+        flex-basis: 20%;
+        text-align: center;
+
+        .list-item__logo {
+          max-width: 95px;
+        }
+      }
+
+      .list-item__right {
+        flex-basis: 80%;
+        padding-left: 15px;
+
+        .list-item__desc {
+          margin-bottom: 20px;
+          color: @text_color;
+          font-size: 0.8rem;
+          line-height: 1.7;
+        }
+
+        .arrow-link {
+          color: @theme_blue;
+          text-transform: uppercase;
+          font-size: 0.7rem;
+          font-weight: 500;
+
+          .arrow {
+            margin-left: 4px;
+          }
+        }
+
+        .list-item__title {
+          display: block;
+          margin-top: 10px;
+          font-size: 1rem;
+          line-height: 1.7;
+          color: @theme_blue;
+        }
+
+        .list-item__date {
+          font-size: 0.8rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .cases,
+  .news {
+    .list {
+      .list-item {
+        padding: 36px 15px;
+
+        .list-item__left {
+          .list-item__logo {
+            max-width: 135px;
+          }
+        }
+
+        .list-item__right {
+          padding-left: 30px;
+
+          .list-item__desc {
+            font-size: 20px;
+            line-height: 32px;
+          }
+
+          .list-item__title {
+            display: block;
+            font-size: 1.2rem;
+          }
+        }
       }
     }
   }
