--- a/layouts/partials/archives/post-share-cn.html
+++ b/layouts/partials/archives/post-share-cn.html
@@ -7,9 +7,9 @@
       {{ partial "svgs/icon-weixin.svg" (dict "width" 18 "height" 18 ) }}
     </a>
     <!-- TODO: weibo -->
-    <a data-site="weibo" class="ssba_weibo_share" href="http://reddit.com/submit?url={{ .URL | absURL }}&title={{ .Params.title }}" target="_blank">
+    <!-- <a data-site="weibo" class="ssba_weibo_share" href="http://reddit.com/submit?url={{ .URL | absURL }}&title={{ .Params.title }}" target="_blank">
       {{ partial "svgs/icon-weibo.svg" (dict "width" 18 "height" 18 ) }}
-    </a>
+    </a> -->
   </div>
 </div>
 
