chore: change absolute url to relative url in footer template

--- a/layouts/partials/layout/footer-cn.html
+++ b/layouts/partials/layout/footer-cn.html
@@ -5,25 +5,25 @@
       <div class="flex-list">
         <h4 class="list-title"><strong>产品</strong></h4>
         <ul>
-          <li><a href="https://pingcap.com/docs-cn/overview/#tidb-%e7%ae%80%e4%bb%8b">TiDB</a></li>
-          <li><a href="https://pingcap.com/docs-cn/tispark/tispark-user-guide/">TiSpark</a></li>
+          <li><a href="/docs-cn/overview/#tidb-%e7%ae%80%e4%bb%8b">TiDB</a></li>
+          <li><a href="/docs-cn/tispark/tispark-user-guide/">TiSpark</a></li>
           <li><a href="https://github.com/pingcap/docs-cn/blob/master/ROADMAP.md" target="_blank">TiDB 路线图</a></li>
         </ul>
       </div>
       <div class="flex-list">
         <h4 class="list-title"><strong>文档</strong></h4>
         <ul>
-          <li><a href="https://pingcap.com/docs-cn/QUICKSTART/">快速入门</a></li>
-          <li><a href="https://pingcap.com/blog-cn/tidb-best-practice/">最佳实践</a></li>
-          <li><a href="https://pingcap.com/docs-cn/FAQ/">常见问题解答</a></li>
-          <li><a href="https://pingcap.com/docs-cn/tools/syncer/">TiDB 周边工具</a></li>
-          <li><a href="https://pingcap.com/docs-cn/releases/README/">版本发布说明</a></li>
+          <li><a href="/docs-cn/QUICKSTART/">快速入门</a></li>
+          <li><a href="/blog-cn/tidb-best-practice/">最佳实践</a></li>
+          <li><a href="/docs-cn/FAQ/">常见问题解答</a></li>
+          <li><a href="/docs-cn/tools/syncer/">TiDB 周边工具</a></li>
+          <li><a href="/docs-cn/releases/README/">版本发布说明</a></li>
         </ul>
       </div>
       <div class="flex-list">
         <h4 class="list-title"><strong>资源</strong></h4>
         <ul>
-          <li><a href="https://pingcap.com/blog-cn/">博客</a></li>
+          <li><a href="/blog-cn/">博客</a></li>
           <li><a href="https://github.com/pingcap" target="_blank">GitHub</a></li>
           <li><a href="https://zhuanlan.zhihu.com/newsql" target="_blank">知乎专栏</a></li>
           <!-- <li><a href="https://www.youtube.com/watch?v=dijsN0bddck" target="_blank">技术分享</a></li> -->
@@ -32,9 +32,9 @@
       <div class="flex-list">
         <h4 class="list-title"><strong>公司</strong></h4>
         <ul>
-          <li><a href="https://pingcap.com/about-cn/">关于</a></li>
-          <li><a href="https://pingcap.com/recruit-cn/">招贤纳士</a></li>
-          <li><a href="https://pingcap.com/news-cn/">报道</a></li>
+          <li><a href="/about-cn/">关于</a></li>
+          <li><a href="/recruit-cn/">招贤纳士</a></li>
+          <li><a href="/news-cn/">报道</a></li>
         </ul>
       </div>
     </div>
