--- a/layouts/partials/layout/footer.html
+++ b/layouts/partials/layout/footer.html
@@ -5,25 +5,25 @@
       <div class="flex-list">
         <h4 class="list-title"><strong>Product</strong></h4>
         <ul>
-          <li><a href="https://pingcap.com/docs/overview/#tidb-introduction">TiDB</a></li>
-          <li><a href="https://pingcap.com/docs/tispark/tispark-user-guide/">TiSpark</a></li>
+          <li><a href="/docs/overview/#tidb-introduction">TiDB</a></li>
+          <li><a href="/docs/tispark/tispark-user-guide/">TiSpark</a></li>
           <li><a href="https://github.com/pingcap/docs/blob/master/ROADMAP.md" target="_blank">Roadmap</a></li>
         </ul>
       </div>
       <div class="flex-list">
         <h4 class="list-title"><strong>Docs</strong></h4>
         <ul>
-          <li><a href="https://pingcap.com/docs/QUICKSTART/">Quick Start</a></li>
-          <li><a href="https://pingcap.com/blog/2017-07-24-tidbbestpractice/">Best Practices</a></li>
-          <li><a href="https://pingcap.com/docs/FAQ/">FAQ</a></li>
-          <li><a href="https://pingcap.com/docs/tools/syncer/">TiDB Utilities</a></li>
-          <li><a href="https://pingcap.com/docs/release/rn/">Release Notes</a></li>
+          <li><a href="/docs/QUICKSTART/">Quick Start</a></li>
+          <li><a href="/blog/2017-07-24-tidbbestpractice/">Best Practices</a></li>
+          <li><a href="/docs/FAQ/">FAQ</a></li>
+          <li><a href="/docs/tools/syncer/">TiDB Utilities</a></li>
+          <li><a href="/docs/release/rn/">Release Notes</a></li>
         </ul>
       </div>
       <div class="flex-list">
         <h4 class="list-title"><strong>Resources</strong></h4>
         <ul>
-          <li><a href="https://pingcap.com/blog/">Blog</a></li>
+          <li><a href="/blog/">Blog</a></li>
           <li><a href="https://github.com/pingcap" target="_blank">GitHub</a></li>
           <!-- <li><a href="https://www.youtube.com/watch?v=dijsN0bddck" target="_blank">Tech Talks</a></li> -->
         </ul>
@@ -31,9 +31,9 @@
       <div class="flex-list">
         <h4 class="list-title"><strong>Company</strong></h4>
         <ul>
-          <li><a href="https://pingcap.com/about/">About</a></li>
-          <li><a href="https://pingcap.com/recruit/">Careers</a></li>
-          <li><a href="https://pingcap.com/news/">News</a></li>
+          <li><a href="/about/">About</a></li>
+          <li><a href="/recruit/">Careers</a></li>
+          <li><a href="/news/">News</a></li>
           <!-- <li>Press</li> -->
         </ul>
       </div>
