--- a/src/less/base.less
+++ b/src/less/base.less
@@ -68,6 +68,8 @@
 @white: #FFF;
 @theme_blue: #3a59f0;
 @gray_white: #F5F5F5;
+@text_color: #3e3e3e;
+@title_color: #142848;
 @bg_black_with_alpha0: fade(@white, 0%);
 @bg_black_with_alpha90: fade(black, 90%);
 
