--- a/layouts/partials/archives/version-switcher.html
+++ b/layouts/partials/archives/version-switcher.html
@@ -22,7 +22,7 @@
         {{- else if eq $current_version "v3.1" -}}
         v3.1-rc
         {{- else if eq $current_version "v1.1" -}}
-        v1.1-rc
+        v1.1-rc (stable)
         {{- else -}}
         {{ $current_version }}
         {{- end -}}
@@ -41,7 +41,7 @@
             {{- else if eq $i "v3.1" -}}
             v3.1-rc
             {{- else if eq $i "v1.1" -}}
-            v1.1-rc
+            v1.1-rc (stable)
             {{- else -}}
             {{ $i }}
             {{- end -}}
