--- a/src/less/sidebar.less
+++ b/src/less/sidebar.less
@@ -202,7 +202,7 @@
   .sticky-sidebar {
     position: -webkit-sticky;
     position: sticky;
-    top: @headerHeight;
+    margin-top: @headerHeight;
     flex: 1;
     align-self: flex-start;
     padding: @sidebarPadding 0;
