chore: update links

--- a/layouts/community-cn/tidb-bug-hunting.html
+++ b/layouts/community-cn/tidb-bug-hunting.html
@@ -113,6 +113,9 @@
     <div class="column is-one-fifth">
       <div class="box"><a target="_blank" href="https://book.tidb.io/session2/chapter1/tiup-intro.html" class="title">TiUP</a><a target="_blank" href="https://pingcap.com/docs-cn/stable/how-to/deploy/orchestrated/tiup/" class="button">操作手册</a></div>
     </div>
+    <div class="column is-one-fifth">
+      <div class="box"><a class="title">其他未列出 Feature</a><a target="_blank" href="https://pingcap.com/docs-cn/stable/" class="button">操作手册</a></div>
+    </div>
   </div>
 </section>
 
