chore: add release notes to each docs-cn page

--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -71,6 +71,7 @@
             <p class="toc-title">本页导航</p>
             <div id="smart_toc_wrapper"></div>
             <div class="live-poster-pc"><img class="lazy" src="/images/live-poster-pc.jpg"></div>
+            <p class="new-version-release"><a href="http://pingcaptidb.mikecrm.com/WywFDVX" target="_blank">TiDB 4.0 RC 版本全新发布，点此申请试用</a></p>
         </div>
     </div>
 </div>
