--- a/layouts/partials/layout/release-banner.html
+++ b/layouts/partials/layout/release-banner.html
@@ -14,7 +14,7 @@
                     <div>
                         {{ if $data_i18_cn }}
                             <a href="{{ $release.link.cn }}" target="_blank" class="hover-underline"
-                              onclick="trackViews('university-release-banner', 'university_signup_form_view')">{{ $release.announcement.cn }}</a>
+                              onclick="trackViews('tidb4.0-release-banner', 'tidb4.0_signup_form_view')">{{ $release.announcement.cn }}</a>
                         {{ else }}
                             <!-- {{ $release.announcement.en }}
                             <a href="{{ $release.link.en }}">Check it out</a> -->
