--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -570,6 +570,14 @@
     }
   }
 
+  .new-version-release {
+    margin-top: 1rem;
+    font-size: 14px;
+    a {
+      color: @themeBlue;
+    }
+  }
+
   .git-info {
     margin-top: 5rem;
     padding: 1rem 0.7rem;
