chore: add new review link under docs-cn pages (#459)

--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -74,7 +74,12 @@
             <p class="toc-title">本页导航</p>
             <div id="smart_toc_wrapper"></div>
             <div class="live-poster-pc"><img class="lazy" src="/images/live-poster-pc.jpg"></div>
-            <p class="new-version-release"><a href="http://pingcaptidb.mikecrm.com/WywFDVX" target="_blank">TiDB 4.0 RC 版本全新发布，点此申请试用</a></p>
+            <p class="new-version-release"><a href="https://pingcap.com/blog-cn/core-competence-of-future-database/ "
+                onclick="trackViews('blog-cn-core-competence-of-future-database/ ', 'core_competence_of_future_database_view')">第一期直播回顾：未来数据库应具备什么核心能力？</a>
+            </p>
+            <p class="new-version-release"><a href="http://pingcaptidb.mikecrm.com/WywFDVX" target="_blank"
+                onclick="trackViews('tidb4.0-release-notes-on-docs-cn', 'tidb4.0_signup_form_view')">TiDB 4.0 RC
+                版本全新发布，欢迎点击试用垂询</a></p>
         </div>
     </div>
 </div>
