--- a/src/less/community/organization-cn.less
+++ b/src/less/community/organization-cn.less
@@ -578,7 +578,7 @@ button.branchBtn.userBtn.orgBtn.tr {
     justify-content: flex-start;
 
     p {
-      width: 32%;
+      width: 20%;
       font-size: 16px;
       line-height: 1.7;
       padding: 5px 0;
@@ -991,5 +991,133 @@ button.branchBtn.userBtn.orgBtn.tr {
   .userSubBtn {
     width: 75px;
     padding: 5px 0;
+  }
+}
+
+.tidb-mva-2019 {
+  .centerd {
+    text-align: center;
+  }
+
+  .header {
+    margin-bottom: 1rem;
+    color: @userOrange;
+  }
+
+  p {
+    max-width: 660px;
+    margin: 0 auto;
+    padding: 0 1.5rem;
+    font-size: 0.875rem;
+  }
+
+  .list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 3rem;
+
+    .card-wrapper {
+      @media screen and (max-width: 768px) {
+        width: 100%;
+      }
+
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 33.33333%;
+      height: 200px;
+      
+      &:hover {
+        .card {
+          opacity: 0;
+        }
+
+        .links {
+          opacity: 1;
+        }
+      }
+    }
+
+    .card,
+    .links {
+      width: 85%;
+      height: 150px;
+      transition: opacity 0.5s;
+    }
+
+    .card {
+      display: flex;
+      background: #f5f6f8;
+      cursor: pointer;
+
+      .left {
+        width: 150px;
+
+        .avatar {
+          width: 100%;
+          height: 150px;
+          object-fit: cover;
+        }
+      }
+
+      .right {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex: 1;
+        padding: 0.5rem;
+
+        .name {
+          margin-bottom: 0.75rem;
+          color: @userOrange;
+          font-size: 1.25rem;
+        }
+
+        .company,
+        .title {
+          @media screen and (max-width: 768px) {
+            font-size: 0.875rem;
+          }
+
+          color: #3f3f3f;
+          font-size: 0.75rem;
+        }
+
+        .company {
+          margin-bottom: 0.5rem;
+        }
+      }
+    }
+
+    .links {
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+
+      position: absolute;
+      top: 50%;
+      left: 7.5%;
+      padding: 0.5rem;
+      background: #f5f6f8;
+      opacity: 0;
+      overflow: scroll;
+      transform: translateY(-50%);
+
+      a {
+        @media screen and (max-width: 768px) {
+          font-size: 0.875rem;
+        }
+
+        display: block;
+        margin: 0.5rem 0;
+        font-size: 0.75rem;
+
+        &:hover {
+          color: @userOrange;
+          text-decoration: underline;
+        }
+      }
+    }
   }
 }
