--- a/src/less/community/organization-cn.less
+++ b/src/less/community/organization-cn.less
@@ -384,6 +384,10 @@ button.branchBtn.userBtn.orgBtn.tr {
       top: 50%;
       transform: translateY(-50%);
 
+      p.title {
+        font-size: 0.75rem;
+      }
+
       .github-icon {
         background: url('/images/github-grey.svg') no-repeat;
         width: 25px;
