--- a/src/less/download-tidb.less
+++ b/src/less/download-tidb.less
@@ -97,83 +97,25 @@
   border-bottom: 1px solid #fff;
 }
 
-.download-instruction {
-  .ins-env-icon {
-    height: 35px;
+
+.ins-env-icon {
+  height: 35px;
+  width: auto;
+  margin: 4rem 0 1rem;
+
+  img {
     width: auto;
-    margin: 2rem 0 1rem;
-
-    img {
-      width: auto;
-      height: 100%;
-      display: block;
-    }
-  }
-
-  .homebrew-install {
-    color: #3351FF;
-  }
-
-  p,
-  ol {
-    font-size: 16px;
-    padding: 10px 0 10px 10px;
-  }
-
-  ol {
-    padding-inline-start: 45px !important;
-  }
-
-  .install-method {
-    font-size: 18px;
-    margin: 1.5rem 1rem 0 0;
-    line-height: 1.7;
-    position: relative;
+    height: 100%;
+    display: block;
+    margin: 0 !important;
   }
 }
 
-.copy {
-  position: absolute;
-  right: 0;
-  width: 85px;
-  float: right;
-  z-index: 2;
-  color: #94a3ea;
-  background: #272822;
-  border: none;
-  border-radius: 0 3px 0 0;
-  padding: 16px .3rem 0;
-  font-family: inherit;
-  font-size: 13px;
-  font-style: italic;
-
-  &:hover {
-    color: rgb(194, 194, 194);
-  }
+.download-tidb-archive {
+  padding: 2rem 0 !important;
+  max-width: 100% !important;
 }
 
-.copy::after {
-  font-family: 'FontAwesome';
-  content: '\f24d';
-  margin-left: 5px;
-}
-
-.highlight {
-  margin: 0 0 10px 10px;
-
-  pre {
-    color:#f8f8f2;
-    background-color: #272822;
-    -moz-tab-size: 4;
-    -o-tab-size: 4;
-    tab-size: 4;
-    padding: 16px;
-    overflow: auto;
-    font-size: 85%;
-    line-height: 1.45;
-    border-radius: 3px;
-  }
-}
 
 @media (max-width: 1700px) {
   .banner__container {
