chore: replace ansible logo with tiup logo in download tidb page

--- a/layouts/page/download.html
+++ b/layouts/page/download.html
@@ -38,7 +38,7 @@
         </div>
         <div class="env-logos">
           <img src="https://download.pingcap.com/images/download-tidb/binary-logo.png" alt="Binary lgoo" />
-          <img src="https://download.pingcap.com/images/download-tidb/ansible-logo.png" alt="Ansible logo" />
+          <img src="https://download.pingcap.com/images/download-tidb/tiup-logo.png" alt="Tiup logo" />
           <img src="https://download.pingcap.com/images/download-tidb/k8s-logo.png" alt="K8s logo" />
           <img src="https://download.pingcap.com/images/download-tidb/docker-logo.png" alt="Docker logo" />
           <img src="https://download.pingcap.com/images/download-tidb/aws-logo.png" alt="AWS logo" />
