--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -75,11 +75,11 @@
             <div id="smart_toc_wrapper"></div>
             <div class="live-poster-pc"><img class="lazy" src="/images/live-poster-pc.jpg"></div>
             <p class="new-version-release"><a href="https://pingcap.com/blog-cn/core-competence-of-future-database/ "
-                onclick="trackViews('blog-cn-core-competence-of-future-database/ ', 'core_competence_of_future_database_view')">第一期直播回顾：未来数据库应具备什么核心能力？</a>
+                    onclick="trackViews('blog-cn-core-competence-of-future-database/ ', 'core_competence_of_future_database_view')">第一期直播回顾：未来数据库应具备什么核心能力？</a>
             </p>
             <p class="new-version-release"><a href="http://pingcaptidb.mikecrm.com/WywFDVX" target="_blank"
-                onclick="trackViews('tidb4.0-release-notes-on-docs-cn', 'tidb4.0_signup_form_view')">TiDB 4.0 RC
-                版本全新发布，欢迎点击试用垂询</a></p>
+                    onclick="trackViews('tidb4.0-release-notes-on-docs-cn', 'tidb4.0_signup_form_view')">TiDB 4.0
+                    全面升级，最高性能提升 44 倍，欢迎报名参加 4.0 官方上线一对一支持计划，更有免费认证课程赠送。</a></p>
         </div>
     </div>
 </div>
