--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -79,7 +79,7 @@
             </p>
             <p class="new-version-release"><a href="http://pingcaptidb.mikecrm.com/WywFDVX" target="_blank"
                     onclick="trackViews('tidb4.0-release-notes-on-docs-cn', 'tidb4.0_signup_form_view')">TiDB 4.0
-                    全面升级，最高性能提升 44 倍，欢迎报名参加 4.0 官方上线一对一支持计划，更有免费认证课程赠送。</a></p>
+                    全面升级，最高性能提升 44 倍，欢迎报名参加 4.0 官方上线一对一支持计划，通过后，更有认证考试资格赠送。</a></p>
         </div>
     </div>
 </div>
