optimize: catch every event and send to GA

--- a/layouts/partials/tracking-code/ga-events-js.html
+++ b/layouts/partials/tracking-code/ga-events-js.html
@@ -20,7 +20,8 @@ var trackViews = function(btn_type, event_category) {
   ga('send', 'event', {
     'eventCategory': eventCategory,
     'eventAction': 'click',
-    'eventLabel': event_label
+    'eventLabel': event_label,
+    'transport': 'beacon'
   });
 }
 </script>
