feat: add code to track pageView data

--- a/layouts/partials/head/meta-seo.html
+++ b/layouts/partials/head/meta-seo.html
@@ -80,4 +80,7 @@
         s.parentNode.insertBefore(bp, s);
     })();
 </script>
+
+<!-- Tracks pageview data-->
+<script type="text/javascript" async src="https://accounts.pingcap.com/static/pingcap_sso/js/track.beta.js"></script>
     
